--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,7 @@ pytest = "^8.3.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.poetry]
+package-mode = false
