--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 description = ""
 authors = ["Sebastian <timeframe1@gmx.de>"]
 readme = "README.md"
+packages = [{include = "poetry-package"}]
+
 
 [tool.poetry.dependencies]
 python = "^3.10"
